--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <button type="submit" class="btn btn-primary search-button" id="search-button" aria-label="submit search">
                 Search
               </button>
-              <hr class="hr weather-hr" />
+              <hr class="border border-dark border-2" />
             </div>
           </div>
         </form>
@@ -43,7 +43,7 @@
 
       <div class="col-lg-9 pb-3">
         <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
+        <section id="forecast" class="row g-3 mt-3" role="region" aria-live="polite"></section>
       </div>
     </div>
   </div>
